[package]
name = "libmemtester"
version = "1.2.0"
authors = ["Tom Gouville <tom.gouville@protonmail.com>"]
description = "A Rust library for testing memory for faults"
license = "GPL-3.0"
edition = "2021"
publish = true

[lib]
name = "libmemtester"
path = "src/lib.rs"


[dependencies]
libc = "0.2.127"
rand = "0.8.5"
nix = "0.24.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features=["memoryapi", "winbase", "processthreadsapi"]}
